warning reduction